create order api

--- a/Pipfile
+++ b/Pipfile
@@ -17,6 +17,7 @@ requests = "*"
 django-seed = {editable = true, git = "https://github.com/kronnakrit/django-seed"}
 drf-yasg = "*"
 djangorestframework-dataclasses = {editable = true, ref="v-stable", git="https://github.com/piti118/djangorestframework-dataclasses"}
+flake8 = "*"
 
 [dev-packages]
 
