--- a/Pipfile
+++ b/Pipfile
@@ -19,6 +19,7 @@ drf-yasg = "*"
 djangorestframework-dataclasses = {editable = true, ref="v-stable", git="https://github.com/piti118/djangorestframework-dataclasses"}
 flake8 = "*"
 djangorestframework-simplejwt = "*"
+beautifulsoup4 = "*"
 
 [dev-packages]
 
