--- a/tox.ini
+++ b/tox.ini
@@ -1,3 +1,10 @@
 [flake8]
 max-line-length = 120
 exclude = tests/*, media/*, */migrations/*
+
+[pycodestyle]
+count = False
+ignore = E261
+max-line-length = 120
+statistics = True
+exclude = tests/*, media/*, */migrations/*, */tests.py
