--- a/tox.ini
+++ b/tox.ini
@@ -7,4 +7,4 @@ count = False
 ignore = E261
 max-line-length = 120
 statistics = True
-exclude = tests/*, media/*, */migrations/*, */tests.py
+exclude = tests/*, media/*, */migrations/*, */tests.py */django-seed/*, */djangorestframework-dataclasses/*
