Fix ignore pycodestyle

--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@ exclude = tests/*, media/*, */migrations/*
 
 [pycodestyle]
 count = False
-ignore = E261
-max-line-length = 120
+ignore = E261, W605
+max-line-length = 121
 statistics = True
-exclude = tests/*, media/*, */migrations/*, */tests.py */django-seed/*, */djangorestframework-dataclasses/*
+exclude = tests/*, media/*, */migrations/*, */tests.py, **/django-seed/**, **/djangorestframework-dataclasses/**
