--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -65,10 +65,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - name: Set up JDK 11
-      uses: actions/setup-java@v2
+    - uses: actions/setup-java@v2
       with:
-        java-version: 11
+        distribution: 'adopt' # See 'Supported distributions' for available options
+        java-version: '11'
     - name: SonarQube Scan
       uses: kitabisa/sonarqube-action@v1.1.0
       with:
