--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,9 +1,9 @@
 sonar.projectKey=thairod-django
-sonar.host.url=https://sonarqube.tools.pttep.com
+sonar.host.url=https://sonarqube.dev.thegang.tech
 # --- optional properties ---
 
 # defaults to project key
-sonar.projectName=nUWI - Backend
+sonar.projectName=Thairod Django
 # defaults to 'not provided'
 sonar.projectVersion=0.1.0
 
@@ -17,6 +17,8 @@ sonar.language=python
 
 sonar.qualitygate.wait=true
 sonar.qualitygate.timeout=300
-sonar.login=SONAR_TOKEN
+
+sonar.exclusions=**/migrations/**, **/wsgi.py, **/asgi.py, *.xml, .deploy/, .pipelines/*
+sonar.coverage.exclusions=**/migrations/**, **/settings/**, manage.py, **/wsgi.py, **/asgi.py, **/tests/**/*
 
 sonar.python.coverage.reportPaths=coverage.xml
