--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -36,6 +36,8 @@ jobs:
     steps:
       - name: Checkout code # checking our the code at current commit that triggers the workflow
         uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
       - name: Cache dependency # caching dependency will make our build faster.
         uses: actions/cache@v2 # for more info checkout pip section documentation at https://github.com/actions/cache
         with:
@@ -50,7 +52,7 @@ jobs:
       - name: Check Python version # checking the python version to see if 3.x is installed.
         run: python --version
       - name: Install Pipenv
-        run: pip install pipenv pycodestyle flake8
+        run: pip install pipenv pycodestyle coverage
       - name: Convert Pipenv to requirement file
         run: pipenv lock -r > requirements.txt
       - name: Install requirements # install application requirements
@@ -58,24 +60,16 @@ jobs:
       - name: Check Syntax # check code formatting
         run: pycodestyle --statistics .
       - name: Run Test # running tests
-        run: python manage.py test
+        run: |
+          coverage run manage.py test
+          coverage report -m
+          coverage xml
+      - name: SonarCloud Scan
+        uses: sonarsource/sonarcloud-github-action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
-  sonarqube:
-    name: SonarQube Trigger
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v2
-    - uses: actions/setup-java@v2
-      with:
-        distribution: 'adopt' # See 'Supported distributions' for available options
-        java-version: '11'
-    - name: SonarQube Scan
-      uses: kitabisa/sonarqube-action@v1.1.0
-      with:
-        JAVA_HOME: '' # Avoid 'java: not found' error
-        host: ${{ secrets.SONAR_HOST_URL }}
-        login: ${{ secrets.SONAR_TOKEN }}
-        projectKey: "thairod-django"
 
 #  package-job: # package job for building and publishing docker images
 #    runs-on: ubuntu-latest
