Fix sonar properties

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,11 +1,10 @@
 sonar.projectKey=thairod-django
-sonar.host.url=https://sonarqube.dev.thegang.tech
 # --- optional properties ---
 
 # defaults to project key
 sonar.projectName=Thairod Django
 # defaults to 'not provided'
-sonar.projectVersion=0.1.0
+#sonar.projectVersion=0.1.0
 
 # Path is relative to the sonar-project.properties file. Defaults to .
 sonar.sources=.
