Add build and push docker to github action

--- a/tox.ini
+++ b/tox.ini
@@ -7,4 +7,4 @@ count = False
 ignore = E261, W605
 max-line-length = 121
 statistics = True
-exclude = tests/*, media/*, */migrations/*, */tests.py, **/django-seed/**, **/djangorestframework-dataclasses/**
+exclude = tests/*, media/*, */migrations/*, */tests.py, **/django-seed/**, **/djangorestframework-dataclasses/**, **/environments/*
