--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -14,7 +14,7 @@ on:
       - main
       - develop
 
-
+# TODO: DJANGO_SETTINGS_MODULE set this in development when build or run!!
 # three job definition
 jobs:
   health-check-job: # health check job for testing and code formatting check
@@ -70,6 +70,31 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+
+  docker-build:
+    runs-on: ubuntu-latest
+    needs: [health-check-job]
+    env:
+      DO_REGISTRY_URL: registry.digitalocean.com/gang-registry
+      IMAGE_NAME: ${{ secrets.DO_REGISTRY_URL }}/thairod/methairod-django
+    steps:
+      - name: Docker login
+        run: |
+          mkdir ~/.docker
+          echo "${{ secrets.DO_REGISTRY_FILE }}" > ~/.docker/config.json
+          docker login ${{ secrets.DO_REGISTRY_URL }}
+      - name: Docker Build
+        run: |
+          echo "Building"
+          docker build --pull -t IMAGE_NAME:GITHUB_SHA .
+          docker tag IMAGE_NAME:GITHUB_SHA $CONTAINER_IMAGE_NAME:latest
+          docker push IMAGE_NAME:GITHUB_SHA
+          docker push IMAGE_NAME:latest
+          echo "Image ${IMAGE_NAME}:${CI_COMMIT_SHORT_SHA} pushed"
+      - name: Docker Logout
+        run: |
+          docker logout "$DO_REGISTRY_URL"
+          rm ~/.docker/config.json
 
 
 #  package-job: # package job for building and publishing docker images
