--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -17,7 +17,7 @@ sonar.language=python
 sonar.qualitygate.wait=true
 sonar.qualitygate.timeout=300
 
-sonar.exclusions=**/migrations/**, **/wsgi.py, **/asgi.py, *.xml, .deploy/, .pipelines/*, **/*.html, **/*.js, **/*.css
-sonar.coverage.exclusions=**/migrations/**, **/settings/**, manage.py, **/wsgi.py, **/asgi.py, **/tests/**/*, **/*.html, **/*.js, **/*.css
+sonar.exclusions=**/migrations/**, **/wsgi.py, **/asgi.py, *.xml, .deploy/, .pipelines/*, **/*.html, **/*.js, **/*.css, **/environments/*
+sonar.coverage.exclusions=**/migrations/**, **/settings/**, manage.py, **/wsgi.py, **/asgi.py, **/tests/**/*, **/*.html, **/*.js, **/*.css, **/environments/*
 
 sonar.python.coverage.reportPaths=coverage.xml
