--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -73,14 +73,13 @@ jobs:
 
   docker-build:
     runs-on: ubuntu-latest
-    needs: [health-check-job]
+#    needs: [health-check-job]
     env:
       DO_REGISTRY_URL: registry.digitalocean.com/gang-registry
       IMAGE_NAME: ${{ secrets.DO_REGISTRY_URL }}/thairod/methairod-django
     steps:
       - name: Docker login
         run: |
-          mkdir ~/.docker
           echo "${{ secrets.DO_REGISTRY_FILE }}" > ~/.docker/config.json
           docker login ${{ secrets.DO_REGISTRY_URL }}
       - name: Docker Build
