--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -87,15 +87,14 @@ jobs:
       - name: Docker Build
         run: |
           echo "Building"
-          docker build --pull -t IMAGE_NAME:GITHUB_SHA .
-          docker tag IMAGE_NAME:GITHUB_SHA $CONTAINER_IMAGE_NAME:latest
-          docker push IMAGE_NAME:GITHUB_SHA
-          docker push IMAGE_NAME:latest
-          echo "Image ${IMAGE_NAME}:${CI_COMMIT_SHORT_SHA} pushed"
+          docker build --pull -t ${{ env.IMAGE_NAME }}:$GITHUB_SHA .
+          docker tag ${{ env.IMAGE_NAME }}:$GITHUB_SHA ${{ env.IMAGE_NAME }}:latest
+          docker push ${{ env.IMAGE_NAME }}:$GITHUB_SHA
+          docker push ${{ env.IMAGE_NAME }}:latest
+          echo "Image ${{ env.IMAGE_NAME }}:$GITHUB_SHA pushed"
       - name: Docker Logout
         run: |
-          docker logout "$DO_REGISTRY_URL"
-          rm ~/.docker/config.json
+          docker logout "${{ secrets.DO_REGISTRY_URL }}"
 
 
 #  package-job: # package job for building and publishing docker images
