--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -87,7 +87,7 @@ jobs:
       - name: Docker Build
         run: |
           echo "Building"
-          docker build --pull -t ${{ env.IMAGE_NAME }}:$GITHUB_SHA $GITHUB_WORKSPACE
+          docker build --pull -t ${{ env.IMAGE_NAME }}:$GITHUB_SHA $GITHUB_ACTION_PATH
           docker tag ${{ env.IMAGE_NAME }}:$GITHUB_SHA ${{ env.IMAGE_NAME }}:latest
           docker push ${{ env.IMAGE_NAME }}:$GITHUB_SHA
           docker push ${{ env.IMAGE_NAME }}:latest
