--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -87,6 +87,9 @@ jobs:
       - name: Docker Build
         run: |
           echo "Building"
+          echo $GITHUB_ACTION_PATH
+          echo ${{ env.IMAGE_NAME }}
+          ls
           docker build --pull -t ${{ env.IMAGE_NAME }}:$GITHUB_SHA $GITHUB_ACTION_PATH
           docker tag ${{ env.IMAGE_NAME }}:$GITHUB_SHA ${{ env.IMAGE_NAME }}:latest
           docker push ${{ env.IMAGE_NAME }}:$GITHUB_SHA
