--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -76,7 +76,7 @@ jobs:
 #    needs: [health-check-job]
     env:
       DO_REGISTRY_URL: registry.digitalocean.com/gang-registry
-      IMAGE_NAME: ${{ secrets.DO_REGISTRY_URL }}/thairod/methairod-django
+      IMAGE_NAME: ${{ secrets.DO_REGISTRY_URL }}/thairod/thairod-django
     steps:
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v1
@@ -88,8 +88,10 @@ jobs:
         run: |
           echo "Building"
           echo $GITHUB_ACTION_PATH
+          echo $GITHUB_SHA
+          echo $GITHUB_WORKSPACE
           echo ${{ env.IMAGE_NAME }}
-          ls
+          pwd
           docker build --pull -t ${{ env.IMAGE_NAME }}:$GITHUB_SHA $GITHUB_ACTION_PATH
           docker tag ${{ env.IMAGE_NAME }}:$GITHUB_SHA ${{ env.IMAGE_NAME }}:latest
           docker push ${{ env.IMAGE_NAME }}:$GITHUB_SHA
