--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -89,10 +89,9 @@ jobs:
           echo "Building"
           echo $GITHUB_ACTION_PATH
           echo $GITHUB_SHA
-          echo $GITHUB_WORKSPACE
           echo ${{ env.IMAGE_NAME }}
-          ehco $GITHUB_WORKSPACE
-          docker build --pull -t ${{ env.IMAGE_NAME }}:$GITHUB_SHA $GITHUB_ACTION_PATH/..
+          echo $GITHUB_WORKSPACE
+          docker build --pull -t ${{ env.IMAGE_NAME }}:$GITHUB_SHA $GITHUB_WORKSPACE/..
           docker tag ${{ env.IMAGE_NAME }}:$GITHUB_SHA ${{ env.IMAGE_NAME }}:latest
           docker push ${{ env.IMAGE_NAME }}:$GITHUB_SHA
           docker push ${{ env.IMAGE_NAME }}:latest
