--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -90,7 +90,7 @@ jobs:
           echo $GITHUB_ACTION_PATH
           echo $GITHUB_SHA
           echo ${{ env.IMAGE_NAME }}
-          echo $GITHUB_WORKSPACE
+          ls $GITHUB_WORKSPACE
           docker build --pull -t ${{ env.IMAGE_NAME }}:$GITHUB_SHA --file $GITHUB_WORKSPACE/Dockerfile .
           docker tag ${{ env.IMAGE_NAME }}:$GITHUB_SHA ${{ env.IMAGE_NAME }}:latest
           docker push ${{ env.IMAGE_NAME }}:$GITHUB_SHA
