--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -78,6 +78,10 @@ jobs:
       DO_REGISTRY_URL: registry.digitalocean.com/gang-registry
       IMAGE_NAME: ${{ secrets.DO_REGISTRY_URL }}/thairod/thairod-django
     steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v1
         with:
@@ -91,7 +95,7 @@ jobs:
           echo $GITHUB_SHA
           echo ${{ env.IMAGE_NAME }}
           ls $GITHUB_WORKSPACE
-          docker build --pull -t ${{ env.IMAGE_NAME }}:$GITHUB_SHA --file $GITHUB_WORKSPACE/Dockerfile .
+          docker build --pull -t ${{ env.IMAGE_NAME }}:$GITHUB_SHA --file ./Dockerfile .
           docker tag ${{ env.IMAGE_NAME }}:$GITHUB_SHA ${{ env.IMAGE_NAME }}:latest
           docker push ${{ env.IMAGE_NAME }}:$GITHUB_SHA
           docker push ${{ env.IMAGE_NAME }}:latest
