--- a/Pipfile
+++ b/Pipfile
@@ -21,6 +21,7 @@ flake8 = "*"
 django-cors-headers = "*"
 djangorestframework-simplejwt = "*"
 beautifulsoup4 = "*"
+line-bot-sdk = "*"
 
 [dev-packages]
 
