Final redeploy to Proen

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -102,30 +102,12 @@ jobs:
       name: Deploy
       runs-on: ubuntu-latest
       env:
-          ENV_NAME: dev-thairod-backend
+          ENV_NAME: env-5503621
           IMAGE_TAG: latest
+          NODE_ID: 16766
 
       steps:
         - name: Redeploy to Proen
           run: |
             curl -I -X POST ${{ secrets.REDEPLOY_URL }}/1.0/environment/control/rest/redeploycontainers?
-            envName=${{ env.ENV_NAME }}&tag=${{ env.IMAGE_TAG }}&session=${{ secrets.REDEPLOY_TOKEN }}
-
-
-#  package-job: # package job for building and publishing docker images
-#    runs-on: ubuntu-latest
-#    needs: [health-check-job] # will be fired if and only if health-check-job is passed.
-#    if: ${{ github.event_name == 'push' }} # will be fired if the trigger event is a push event.
-#    steps:
-#      - name: Checkout Code # checking out code.
-#        uses: actions/checkout@v2
-#      - name: Build & Publish Image # we are using a public GitHub Action to build and publish docker image to our GCR registry.
-#        uses: docker/build-push-action@v1
-#        env:
-#          app_name: app
-#        with:
-#          username: _json_key # default for gcr.io
-#          password: ${{ secrets.GKE_PASSWORD }} # service account file to be set as secret
-#          registry: gcr.io # gcr registry domain
-#          repository: ${{secrets.GKE_PROJECT}}/github-django-actions/app # GKE_PROJECT is out GCP Project id to be set as secret.
-#          tag_with_sha: true # this will tag our image with commit id. For example our image our be gcr.io/project-id/github-django-actions/app:sha-7865423 where 7865423 is the short sha of our commit.
+            envName=${{ env.ENV_NAME }}&tag=${{ env.IMAGE_TAG }}&nodeID=${{ env.NODE_ID }}&session=${{ secrets.REDEPLOY_TOKEN }}
