--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -109,5 +109,4 @@ jobs:
       steps:
         - name: Redeploy to Proen
           run: |
-            curl -X POST ${{ secrets.REDEPLOY_URL }}/1.0/environment/control/rest/redeploycontainers?
-            envName=${{ env.ENV_NAME }}&tag=${{ env.IMAGE_TAG }}&nodeID=${{ env.NODE_ID }}&session=${{ secrets.REDEPLOY_TOKEN }}
+            curl ${{ secrets.REDEPLOY_URL }}/1.0/environment/control/rest/redeploycontainers?envName=${{ env.ENV_NAME }}&tag=${{ env.IMAGE_TAG }}&nodeID=${{ env.NODE_ID }}&session=${{ secrets.REDEPLOY_TOKEN }}
