--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -114,6 +114,7 @@ jobs:
           with:
             url: ${{ secrets.REDEPLOY_URL }}/1.0/environment/control/rest/redeploycontainers
             method: 'GET'
+            timeout: 1000000
             params: '{ "envName": "${{ env.ENV_NAME }}", "tag": "${{ env.IMAGE_TAG }}", "nodeID": "${{ env.NODE_ID }}", "session": "${{ env.REDEPLOY_TOKEN}}" }'
         - name: 'Use response'
           run: echo ${{ steps.api.outputs.response }}
