--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -72,7 +72,7 @@ jobs:
 
   docker-build:
     runs-on: ubuntu-latest
-    needs: [health-check-job]
+#    needs: [health-check-job]
     env:
       DO_REGISTRY_URL: registry.digitalocean.com/gang-registry
       IMAGE_NAME: ${{ secrets.DO_REGISTRY_URL }}/thairod/thairod-django
