--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,14 +3,9 @@ name: Main Workflow
 
 # triggers for our workflow
 on:
-  # opening a pull request to master and develop branch will be a trigger
-  pull_request:
-    branches:
-      - main
   # any code pushed to master and develop branch will also be a trigger
   push:
     branches:
-      - main
       - develop
 
 # three job definition
@@ -47,7 +42,7 @@ jobs:
       - name: Setup python environment # setting python environment to 3.x
         uses: actions/setup-python@v2
         with:
-          python-version: '3.x' # if you want multiple python version run just use matrix strategy in job config. See the documentation of GitHub Actions
+          python-version: "3.x" # if you want multiple python version run just use matrix strategy in job config. See the documentation of GitHub Actions
       - name: Check Python version # checking the python version to see if 3.x is installed.
         run: python --version
       - name: Install Pipenv
@@ -72,7 +67,7 @@ jobs:
 
   docker-build:
     runs-on: ubuntu-latest
-    needs: [ health-check-job ]
+    needs: [health-check-job]
     env:
       DO_REGISTRY_URL: registry.digitalocean.com/gang-registry
       IMAGE_NAME: ${{ secrets.DO_REGISTRY_URL }}/thairod/thairod-django
@@ -101,7 +96,7 @@ jobs:
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
-    needs: [ docker-build ]
+    needs: [docker-build]
     env:
       ENV_NAME: env-5503621
       IMAGE_TAG: latest
@@ -121,5 +116,5 @@ jobs:
       #            method: 'GET'
       #            timeout: 1000000
       #            params: '{ "envName": "${{ env.ENV_NAME }}", "tag": "${{ env.IMAGE_TAG }}", "nodeID": "${{ env.NODE_ID }}", "session": "${{ env.REDEPLOY_TOKEN}}" }'
-      - name: 'Use response'
+      - name: "Use response"
         run: echo ${{ steps.api.outputs.response }}
